# amigo_description

./: .gitignore  CMakeLists.txt  database.config  mainpage.dox  manifest.xml  package.xml  publish_jointstates.py
custom/: joint_groups.yaml  skills.yaml
launch/: load_robot.launch
media/materials/scripts/: aluminum.material  bottomcovers.material  logo.material  orange.material  white.material
media/meshes/: bottomcovers.dae  forearmtextured.dae  headtextured.dae  kinect_without_base.dae  logo.dae  necktilttextured.dae  torsoassistslidertextured.dae  torsocovers.dae  torsoslidertextured.dae  upperarmtextured.dae
scripts/: update.bash
sdf/: amigo.sdf  amigo_no_wheels.sdf  amigo_physicless.sdf  model.config
urdf/: amigo.urdf  amigo.urdf.xacro  amigo_no_wheels.urdf  amigo_old.urdf  amigo_with_wheels.urdf  macro_definitions.xacro  materials.urdf.xacro
urdf/arm_extra_visuals/: arm_extra.urdf.xacro
urdf/arms/: arm.urdf.xacro
urdf/base/: base.urdf.xacro
urdf/body/: body.urdf.xacro
urdf/body_extra_visuals/: body_extra.urdf.xacro
urdf/head/: head.urdf.xacro
urdf/kinect/: top_kinect.urdf.xacro
urdf/laser/: laser.urdf.xacro  torso_laser.urdf.xacro
urdf/xacro/: amigo.urdf.xacro  amigo_no_wheels.urdf.xacro  amigo_old.urdf.xacro  amigo_with_wheels.xacro  gazebo.urdf.xacro  gazebo_old.urdf.xacro  macro_definitions.xacro  materials.urdf.xacro
urdf/xacro/arm_extra_visuals/: arm_extra.urdf.xacro
urdf/xacro/arms/: ar_markers.urdf.xacro  arm.transmission.xacro  arm.urdf.xacro
urdf/xacro/base/: base.transmission.xacro
urdf/xacro/body/: body.urdf.xacro  (+1 more)
(+10 files in other folders)
